payment-order-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-order
  labels:
    name: payment-order
