kafka-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    name: kafka
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
  name: kafka-service
  namespace: kafka
spec:
  type: NodePort
  ports:
    - port: 9092
      nodePort: 30022
  selector:
    app: kafka-broker
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: kafka-broker
  name: kafka-broker
  namespace: kafka
spec:
  serviceName: kafka-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      automountServiceAccountToken: false
      hostname: kafka-broker
      containers:
      - env:
        - name: KAFKA_BROKER_ID
          value: "1"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: zookeeper-service:2181
        - name: KAFKA_ADVERTISED_LISTENERS
          value: PLAINTEXT://kafka-service.kafka.svc.cluster.local:9092
        - name: KAFKA_LISTENERS
          value: PLAINTEXT://:9092
        - name: JMX_PORT
          value: "9098"
        - name: KAFKA_JMX_OPTS
          valueFrom:
            configMapKeyRef:
              name: kafka-configmap
              key: kafka-jmx-opts
        image: wurstmeister/kafka
        imagePullPolicy: IfNotPresent
        name: kafka-broker
        resources:
          limits:
            cpu: "500m"
            memory: "500m"
            ephemeral-storage: "4Gi"
        ports:
        - containerPort: 9092
        volumeMounts:
          - name: data
            mountPath: /mnt/kafka
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
