kafka-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-manager
  template:
    metadata:
      labels:
        app: kafka-manager
    spec:
      automountServiceAccountToken: false
      containers:
        - name: kafka-manager
          image: vishant07/kafka-manager:v1
          resources:
            limits:
              cpu: "500m"
              memory: "500m"
              ephemeral-storage: "4Gi"
          ports:
            - containerPort: 80
          command:
            - ./bin/kafka-manager
            - -Dhttp.port=80
          volumeMounts:
            - name: kafka-storage
              mountPath: /conf
      volumes:
        - name: kafka-storage
          persistentVolumeClaim:
            claimName: kafka-manager-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  selector:
    app: kafka-manager
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30028
