kafka-ui.yaml
# manifests/kafka-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-ui
  name: kafka-ui
  namespace: kafka
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kafka-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-ui
  name: kafka-ui
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      automountServiceAccountToken: false
      containers:
        - image: provectuslabs/kafka-ui:master
          name: kafka-ui-container
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "500m"
              ephemeral-storage: "4Gi"
          volumeMounts:
            - name: kafka-ui-storage
              mountPath: /etc/kafkaui/dynamic_config.yaml
      volumes:
        - name: kafka-ui-storage
          persistentVolumeClaim:
            claimName: kafka-manager-pvc
