payment-order-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-order-app
  namespace: payment-order
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-order-app
  template:
    metadata:
      labels:
        app: payment-order-app
    spec:
      containers:
        - name: payment-order-app
          image: vadimstepuro/payment-order-app:1.0.13
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-order-app-service
  namespace: payment-order
spec:
  type: NodePort
  selector:
    app: payment-order-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
      nodePort: 30001
