payment-order-pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-order-pgadmin-deployment
  namespace: payment-order
spec:
  selector:
    matchLabels:
      app: payment-order-pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: payment-order-pgadmin
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
              name: pgadminport
---
apiVersion: v1
kind: Service
metadata:
  name: payment-order-pgadmin-service
  namespace: payment-order
  labels:
    app: payment-order-pgadmin
spec:
  selector:
    app: payment-order-pgadmin
  type: NodePort
  ports:
    - port: 80
      nodePort: 30201
