payment-order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-order-ingress
  namespace: payment-order
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: payment-order.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: payment-order-app-service
                port:
                  number: 8081
